--- a/view/qu-ck-editor/qu-ck-editor/index.phtml
+++ b/view/qu-ck-editor/qu-ck-editor/index.phtml
@@ -1,13 +1,19 @@
 <?
     $this->headTitle('Qu CKEditor');
 ?>
-    <textarea id="editor"></textarea>
+<div class="row-fluid">
+    <div class="span12">
+        <h1>Qu CKEditor</h1>
+        <textarea id="editor"></textarea>
+    </div>
+</div>
 <?
-    $this->QuCkEditor(
+    $this->QuCKEditor(
         'editor',
             array('Width' => "100%",
-                 'Height' => "340",
-                 'toolbar'=> array(
+                  'Height' => "340",
+                  'Color' => "#000",
+                  'Toolbar'=> array(
                      array('Source','Maximize'),
                      array('Templates','Styles','Format'),
                      array('Bold','Italic','Underline','Subscript','Superscript'),
