--- a/view/qu-ck-editor/qu-ck-editor/index.phtml
+++ b/view/qu-ck-editor/qu-ck-editor/index.phtml
@@ -19,7 +19,7 @@
     'editor',
         array('width' => "100%",
             'height' => "300",
-            'uiColor'=> '#FFFFFF',
+            'uiColor'=> '#F4F4F4',
      ));
 ?>
 </div>
